Knight: One of the fathers of AI is worried about its future.

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -832,6 +832,11 @@
         <a href="https://qz.com/1453112/amazon-has-everything-it-needs-to-make-massively-popular-algorithm-driven-fiction/">Amazon has everything it needs to make massively popular algorithm-driven fiction</a>,
         <i class="website">Quarz</i>, 16.11.2018.
       </li>
+      <li>Knight, Will:
+        <a href="https://www.technologyreview.com/s/612434/one-of-the-fathers-of-ai-is-worried-about-its-future/">One of the fathers of <abbr>AI</abbr> is worried about its future</a>,
+        <i class="website"><abbr>MIT</abbr> Technology Review</i>, 17.11.2018.
+        <br /><q>Yoshua Bengio wants to stop talk of an <abbr>AI</abbr> arms race and make the technology more accessible to the developing world.</q>
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
