apenwarr: Forget privacy: you're terrible at targeting anyway

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -848,6 +848,14 @@
           Citizen Score in China
         -->
       </li>
+      <li>
+        <a href="https://apenwarr.ca/log/20190201">Forget privacy: you're terrible at targeting anyway</a>,
+        <i class="blog">apenwarr</i>, 01.02.2019.
+        Quote:
+        <blockquote>This is, by the way, the dirty secret of the machine learning movement:
+          almost everything produced by <abbr>ML</abbr> could have been produced, more cheaply, using a very dumb heuristic you coded up by hand,
+          because mostly the <abbr>ML</abbr> is trained by feeding it examples of what humans did while following a very dumb heuristic.</blockquote>
+      </li>
     </ul>
 
     <h3>Introductory Articles and Materials</h3>
