Add: McMullen: Machine Learning is Just Mathematics! Free Machine Learning Resources

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -942,6 +942,41 @@
         <a href="https://www.youtube.com/watch?v=itzmu0l93wM">How to get started in machine learning - best books and sites for machine learning</a>
         (Python Programmer on YouTube, 9 minutes, 22.12.2017).
       </li>
+      <li>McMullen, Giles:
+        <a href="https://www.youtube.com/watch?v=tGyfmzuR4d4">Machine Learning is Just Mathematics! Free Machine Learning Resources</a>
+        (Python Programmer on YouTube, 8 minutes, 27.09.2019).
+        <br />In order to really understand machine learning, you need to be confident in linear algebra, calculus, probability and statistics.
+        Linear algebra involves the manipulation of matrices. You need descriptive statistics to better understand the data, normalise the data, etcetera.
+        When you have built a model, you need calculus to reduce the arrow function.
+        Giles presents several resources for learning these skills, for example the book
+        <a href="https://duckduckgo.com/?q=%22mathematical+methods+for+science+students%22&t=ffab&ia=products"><i class="booktitle">Mathematical Methods for Science Students</i></a>
+        by G. Stephenson (1961; good for linear algebra and calculus),
+        <a href="http://greenteapress.com/thinkstats2/html/index.html"><i class="booktitle">Think Stats: Exploratory Data Analysis in Python</i></a>
+        by Allen B. Downey (a very accessible introduction to Python and statistics, freely available online),
+        <a href="https://www.springer.com/us/book/9780387402727"><i class="booktitle">All of Statistics: A Concise Course in Statistical Inference</i></a>
+        <!-- https://duckduckgo.com/?q=%22All+of+Statistics%3A+A+Concise+Course+in+Statistical+Inference%22&t=ffab&ia=products -->
+        by Larry Wasserman (2004; a more advanced and more expensive book),
+        <a href="https://cs.gmu.edu/~sean/book/metaheuristics/"><i class="booktitle">Essentials of Metaheuristics</i></a>
+        <!-- https://cs.gmu.edu/~sean/book/metaheuristics/Essentials.pdf / https://econ.ubbcluj.ro/~rodica.lung/taco/literatura/EssentialsMetaheuristics.pdf -->
+        by Sean Luke (which covers much of machine learning), the YouTube playlist
+        <a href="https://www.youtube.com/playlist?list=PLZHQObOWTQDPD3MizzM2xVFitgF8hE_ab">Essence of linear algebra</a>
+        (14 videos on the channel 3Blue1Brown), the YouTube playlist
+        <a href="https://www.youtube.com/playlist?list=PLZHQObOWTQDMsr9K-rj53DwVRMYO3t5Yr">Essence of calculus</a>
+        (12 videos on the channel 3Blue1Brown), the course
+        <a href="https://www.coursera.org/specializations/mathematics-machine-learning">Mathematics for Machine Learning</a>
+        by Imperial College London, hosted on Coursera, the course
+        <a href="https://ocw.mit.edu/courses/mathematics/18-06-linear-algebra-spring-2010/">Linear Algebra by professor Gilbert Strang</a>
+        on <abbr>MIT</abbr> OpenCourseWare (34 video lectures), the course
+        <a href="https://ocw.mit.edu/courses/sloan-school-of-management/15-097-prediction-machine-learning-and-statistics-spring-2012/">Prediction: Machine Learning and Statistics by professor Cynthia Rudin</a>
+        on <abbr>MIT</abbr> OpenCourseWare (not a video course), the paper
+        <a href="https://homes.cs.washington.edu/~pedrod/papers/cacm12.pdf">A Few Useful Things to Know About Machine Learning</a>
+        by Pedro Domingos, the
+        <a href="https://developers.google.com/machine-learning/crash-course/">Machine Learning Crash Course by Google</a>
+        (which focuses on TensorFlow), the book
+        <i class="booktitle">Artificial Intelligence: A Modern Approach</i> by Stuart Russell and Peter Norvig,
+        <a href="http://www-bcf.usc.edu/~gareth/ISL/"><i class="booktitle">An Introduction to Statistical Learning with Applications in R</i></a>
+        by  Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani (downloadable in <abbr>PDF</abbr> format).
+      </li>
     </ul>
 
     <p>Books:</p>
