Add: Giles McMullen's review of Hands-On Machine Learning with Scikit-Learn and TensorFlow

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -1001,7 +1001,20 @@
         <i class="booktitle">Hands-On Machine Learning with Scikit-Learn and TensorFlow</i>. O'Reilly, March 2017. (572 pages)
         <a href="http://shop.oreilly.com/product/0636920052289.do"><abbr>ISBN</abbr> ?</a>.
         <br />See also the author's <a href="https://github.com/ageron/handson-ml">handson-ml repository on GitHub</a>.
+        A <a href="http://shop.oreilly.com/product/0636920142874.do">preview of the second edition</a> was released in November 2018.
+        For a raving review, see Giles McMullen's YouTube video
+        <a href="https://www.youtube.com/watch?v=1RiFIYwuwHM">Is this the BEST BOOK on Machine Learning? Hands On Machine Learning Review</a>
+        (Python Programmer on YouTube, 6 minutes, 24.01.2019).
+        Giles stresses that this is a <em>practical</em> book that helps you implement what it teaches
+        and that there are better books if you are interested in the <em>theory</em> of machine learning.
       </li>
+      <!--@@recheck!
+      <li>
+        Effective Computation in Physics website http://physics.codes/
+        https://github.com/physics-codes
+        Giles McMullen's YouTube video "Could this be the MOST UNDERRATED beginners PYTHON BOOK ?", 4 minutes, 14.02.2019: https://www.youtube.com/watch?v=m5gq_-x8DT8
+      </li>
+      -->
       <li>Shukla, Nishant:
         <i class="booktitle">Machine Learning with TensorFlow</i>. Manning Publications, January 2018. (272 pages)
         <a href="https://www.manning.com/books/machine-learning-with-tensorflow"><abbr>ISBN</abbr> 9781617293870</a>.
