Ekin: AI can help us fight climate change

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -848,6 +848,10 @@
           Citizen Score in China
         -->
       </li>
+      <li>Ekin, Annette:
+        <a href="https://horizon-magazine.eu/article/ai-can-help-us-fight-climate-change-it-has-energy-problem-too.html"><abbr>AI</abbr> can help us fight climate change. But it has an energy problem, too</a>,
+        <i class="website">Horizon: the <abbr>EU</abbr> Research &amp; Innovation magazine</i>, 12.09.2019.
+      </li>
       <li>
         <a href="https://apenwarr.ca/log/20190201">Forget privacy: you're terrible at targeting anyway</a>,
         <i class="blog">apenwarr</i>, 01.02.2019.
