Add: Rene Girard on Mimetic Desire (Imitatio Conf 2008); reordered NZZ articles

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -875,18 +875,6 @@
         <i class="newspaper">Neue Zürcher Zeitung</i>, 12.01.2019.
       </li>
       <li>
-        <a href="https://www.nzz.ch/feuilleton/rene-girard-spricht-ueber-neid-grausamkeit-und-glauben-ld.1464403" hreflang="de" lang="de">René Girard: Warum kämpfen wir? Und wie können wir aufhören?</a>,
-        <i class="newspaper">Neue Zürcher Zeitung</i>, 10.03.2019.
-        This is a shortened translation of an interview by Robert Pogue Harrison that took place in 2005 and
-        was broadcast as part of the program &ldquo;Entitled Opinions&rdquo;.
-      </li>
-      <li>
-        <a href="https://www.nzz.ch/feuilleton/rrene-girard-neid-ist-die-triebfeder-unseres-begehrens-ld.1472161" hreflang="de" lang="de">René Girard: «Wir reden so viel über Sex, weil wir es nicht wagen, über Neid zu sprechen»</a>,
-        <i class="newspaper">Neue Zürcher Zeitung</i>, 04.08.2019.
-        This is a shortened translation of an interview by Robert Pogue Harrison that took place in 2005 and
-        was broadcast as part of the program &ldquo;Entitled Opinions&rdquo;.
-      </li>
-      <li>
         <a href="https://www.youtube.com/watch?v=GIwEs1RkiX4" lang="fr">René Girard - Entretien avec Jacques Chancel (1978)</a>
         (René Girard Archives on YouTube, 58 minutes, 29.04.2016).
         This is an audio recording of an interview by the journalist Jacques Chancel in Radioscopie (France Inter) on 02.11.1978.
@@ -963,6 +951,28 @@
       <li>
         <a href="https://www.youtube.com/watch?v=36pvMK-BrnM" lang="fr">René Girard - Entretien sur Radio Courtoisie (2005)</a>
         (Artesquieu on YouTube, 82 minutes, 29.01.2019).
+      </li>
+      <li>
+        <a href="https://www.nzz.ch/feuilleton/rene-girard-spricht-ueber-neid-grausamkeit-und-glauben-ld.1464403" hreflang="de" lang="de">René Girard: Warum kämpfen wir? Und wie können wir aufhören?</a>,
+        <i class="newspaper" lang="de">Neue Zürcher Zeitung</i>, 10.03.2019.
+        This is a shortened translation of an interview by Robert Pogue Harrison that took place in 2005 and
+        was broadcast as part of the program &ldquo;Entitled Opinions&rdquo;.
+      </li>
+      <li>
+        <a href="https://www.nzz.ch/feuilleton/rrene-girard-neid-ist-die-triebfeder-unseres-begehrens-ld.1472161" hreflang="de" lang="de">René Girard: «Wir reden so viel über Sex, weil wir es nicht wagen, über Neid zu sprechen»</a>,
+        <i class="newspaper" lang="de">Neue Zürcher Zeitung</i>, 04.08.2019.
+        This is a shortened translation of an interview by Robert Pogue Harrison that took place in 2005 and
+        was broadcast as part of the program &ldquo;Entitled Opinions&rdquo;.
+      </li>
+      <li>
+        <a href="https://www.youtube.com/watch?v=4w3WUqzfXK4">Rene Girard on Mimetic Desire</a>
+        (imitatio08 on YouTube, 7 minutes, 29.05.2008).
+        This is an excerpt from an interview recorded at the Imitatio Conference on 29 April 2008.
+        <br />Full interview:
+        <a href="https://www.youtube.com/watch?v=Ak8VXw-9NBQ">Imitatio Conf 2008: Rene Girard Genesis of Mimetic Theory 1</a>
+        (9 minutes) and
+        <a href="https://www.youtube.com/watch?v=xwp3haqBhCc">Imitatio Conf 2008: Rene Girard Genesis of Mimetic Theory 2</a>
+        (8 minutes).
       </li>
     </ul>
 
