Add: resources on Imitatio website

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -131,6 +131,12 @@
         <a href="http://www.thielfoundation.org/">Thiel Foundation</a>
         that furthers research and the application of Girar's mimetic theory 
         across the social sciences.
+        The Imitatio website contains useful resources such as
+        <a href="https://www.imitatio.org/resources">Resources (on Mimetic Theory)</a>
+        and
+        <a href="https://www.imitatio.org/introduction">A Course with Professor Girard</a>
+        (by Andrew Feenberg).
+        <br />
         Peter Thiel was <a href="https://en.wikipedia.org/wiki/Peter_Thiel#College_and_law_school">influenced by the mimetic theory</a>
         (see this <a href="https://www.youtube.com/watch?v=esk7W9Jowtc">interview on YouTube</a>).
         See also 
