--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -984,6 +984,12 @@
         <a href="https://www.youtube.com/watch?v=xwp3haqBhCc">Imitatio Conf 2008: Rene Girard Genesis of Mimetic Theory 2</a>
         (8 minutes).
       </li>
+      <li><span lang="fr">Girard, René</span>:
+        <a href="https://www.youtube.com/playlist?list=PL75D1242EC54E641F">Scapegoating at Çatalhöyük</a>
+        (ImitatioVideo on YouTube, 2013). This is a YouTube playlists containing videos of René Girard's talk
+        at the <abbr>COV&amp;R</abbr> conference in Riverside, California, in June 2008.
+        <!--Same talk/videos combined into a single video: https://www.youtube.com/watch?v=fzLSPHteh1M posted by Intellectual Deep Web, 01.06.2019 -->
+      </li>
     </ul>
 
     <h2>Other Links</h2>
