Add: Morrissey: The René Girard Bibliography

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -189,6 +189,9 @@
         YouTube channels with videos of conference talks, lectures and debates with René Girard,
         usually in French.
       </li>
+      <li>Morrissey, Christopher S.:
+        <a href="http://www.morec.com/girard/index.htm">The Ren&eacute; Girard Bibliography</a>.
+      </li>
     </ul>
 
     <h2 id="girard_biblio">Books</h2>
