Add: Hommage à René Girard : le sacrifice à l’aube de la sédentarisation

--- a/humanities/girard_rene.html
+++ b/humanities/girard_rene.html
@@ -684,6 +684,17 @@
         See also the
         <a href="https://www.catalhoyuk.com/research/bibliography">Bibliography of the Çatalhöyük Research Project</a>.)
       </li>
+      <li><span lang="fr">
+        <a href="http://www.chartes.psl.eu/fr/actualite/sacrifice-aube-sedentarisation-rene-girard-site-neolithique-catalhoyuk" hreflang="fr">Hommage à René Girard : le sacrifice à l’aube de la sédentarisation</a>,
+        <i class="website">École nationale des chartes</i></span>:
+        announcement of a conference on 2 February 2016. The webpage contains an embedded video entitled
+        <a href="https://youtu.be/zIbjYULo8EQ" lang="fr">Le sacrifice à l’aube de la sédentarisation. René Girard et le site néolithique de Çatalhöyük</a>,
+        the recording of a talk by Vyatcheslav Selemenev.
+        <br />See also
+        <a href="https://www.franceculture.fr/conferences/ecole-nationale-des-chartes/le-sacrifice-laube-de-la-sedentarisation-rene-girard-et-le" hreflang="fr" lang="fr">Le sacrifice à l’aube de la sédentarisation. René Girard et le site néolithique de Çatalhöyük (France Culture)</a>
+        (24.02.2016).
+        <!-- See also "Chronology of the Neolithic period": https://en.wikipedia.org/wiki/%C3%87atalh%C3%B6y%C3%BCk#Chronology -->
+      </li>
       <!--
       <li>:
         <i class="booktitle"></i>. .
