Add: Alva: Machine Learning Books for Beginners

--- a/science/machine-learning.html
+++ b/science/machine-learning.html
@@ -981,6 +981,17 @@
         <a href="http://www-bcf.usc.edu/~gareth/ISL/"><i class="booktitle">An Introduction to Statistical Learning with Applications in R</i></a>
         by  Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani (downloadable in <abbr>PDF</abbr> format).
       </li>
+      <li>Alva:
+        <a href="https://www.youtube.com/watch?v=vEBYLnHacQM">Machine Learning Books for Beginners</a>
+        (Alva Liu on YouTube, 7 minutes, 19.04.2018).
+        <br />Alva is a master student in machine learning and presents the textbooks she used for her courses:
+        <i class="booktitle">An Introduction to Statistical Learning</i> by Gareth James, Daniela Witten, Trevor Hastie and Robert Tibshirani (easy to understand; covers the fundamentals),
+        <i class="booktitle">Pattern Recognition and Machine Learning</i> by Christopher Bishop (contains a lot of probability and linear algebra),
+        <i class="booktitle">Artificial Intelligence - A Modern Approach</i> by Stuart Russell and Peter Norvig (which introduces many approaches used in <abbr>AI</abbr>, not just machine learning),
+        <i class="booktitle">Machine Learning - An Algorithmic Perspective</i> by Stephen Marsland (concise and gets to the point straight away),
+        <i class="booktitle">Deep Learning</i> by Ian Goodfellow, Joshua Bendigo and Aaron Courville (a very popular book), and
+        <i class="booktitle">Introduction to Time Series and Forecasting</i> by Peter Brockwell and Richard Davis.
+      </li>
     </ul>
 
     <p>Books:</p>
