Add: Bill Maher quote; h2: History of Religion (Hume, Smith)

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -47,20 +47,20 @@
       <li><a href="../humanities/index.html">Humanities</a>
         <ul>
           <li><a href="../humanities/girard_rene.html" lang="fr">René Girard</a></li>
+          <li><a href="../humanities/the-one-whose-name-must-not-be-mentioned.html">The Unnamable One</a></li>
         </ul>
       </li>
     </ul>
   </nav>
 
   <main>
-    <blockquote id="introquote">
+    <blockquote class="introquote">
       <p>
         <q cite="https://en.wikipedia.org/wiki/Hitchens%27s_razor">What can be asserted without evidence can be dismissed without evidence.</q>
         <cite><a href="https://en.wikipedia.org/wiki/Christopher_Hitchens">Christopher Hitchens</a></cite>
       </p>
     </blockquote>
-  <!--@@Bil Maher quote -> page about atheism-->
-  <!--
+  <!--@@Bil Maher quote [reference below] -> page about atheism-->
     <blockquote id="introquote">
       <p>
         <q cite="https://en.wikiquote.org/wiki/Atheism#19th_century_and_later">Until someone claims to see 
@@ -68,11 +68,12 @@
         idiots must stop claiming that atheism is a religion. 
         There's one little difference: Religion is defined as the belief in and worship of a superhuman controlling power, and atheism is — precisely not that. 
         Got it? <strong>Atheism is a religion like abstinence is a sex position</strong>.</q>
-        <cite>Real Time With Bill Maher (<abbr>HBO</abbr>, 2012-02-03)</cite>
+        <cite>Real Time With Bill Maher (<abbr>HBO</abbr>, 2012-02-03),
+        quoted in <a href="https://www.mediaite.com/tv/bill-mahers-new-rule-atheism-and-religion-are-not-two-sides-of-the-same-coin/">"Maher’s New Rule: Atheism And Religion Are ‘Not Two Sides Of The Same Coin’"</a>,
+        <i class="website">Mediaite</i>, 3 February 2012.</cite>
       </p>
     </blockquote>
-  -->
-    <blockquote id="introquote">
+    <blockquote class="introquote">
       <p>
         <q cite="https://en.wikiquote.org/wiki/David_Hume#Book_1:_Of_the_understanding">Generally speaking, the errors in religion are dangerous; those in philosophy only ridiculous.</q>
         <cite>David Hume, <i class="booktitle">A Treatise of Human Nature</i> (1739-40)</cite>
@@ -211,6 +212,34 @@
       </li>
     </ul>
 
+    <h2>History of Religion</h2>
+    <p>There are many books about the history of religion or specific religions,
+      but few that offer a convincing theory of the origin of religion.
+      Many such theories assume that religion or faith originates from the attempts of early humans
+      to answer questions such as, &ldquo;What happens after we die?&rdquo; and &ldquo;Who created nature or the universe?&rdquo;.
+      Such theories confuse the &ldquo;benefits&rdquo; or advantages of faith&mdash;<abbr>i.e.</abbr> the answers to such questions&mdash;with
+      the causes of its original emergence. (This type of thinking sounds like an example of the fallacy known as
+      <a href="https://en.wikipedia.org/wiki/Post_hoc_ergo_propter_hoc">post hoc ergo propter hoc</a>.)
+      There is no evidence that these later benefits, with which we are familiar, are also the causes of the emergence of faith.
+      <!--Similarly, people have sometimes confused the later benefits of bipedalism with its cause. Cf. F. Schrenk: Die Frühzeit des Menschen. p. 32. Cf. also https://en.wikipedia.org/wiki/Bipedalism#Evolution_of_human_bipedalism -->
+    </p>
+    <ul>
+      <li>Hume, David: <i class="booktitle">Dialogues Concerning Natural Religion, and The Natural History of Religion</i>. Edited by J. C. A. Gaskin. Oxford University Press, 2008. (256 pages)
+        <a href="https://global.oup.com/academic/product/dialogues-concerning-natural-religion-and-the-natural-history-of-religion-9780199538324"><abbr>ISBN</abbr> 9780199538324</a>.
+      </li>
+      <li>Smith, Wilfred Cantwell:
+        <i class="booktitle">The Meaning and End of Religion</i>. [1962] Fortress Press, 1990. (352 pages)
+        <a href="http://fortresspress.com/product/meaning-and-end-religion"><abbr>ISBN</abbr> 9780800624750</a>.
+        <br />Publisher's description:
+        <quote>Wilfred Cantwell Smith, maintained in this vastly important work that Westerners have misperceived religious life by making "religion" into one thing. He shows the inadequacy of "religion" to capture the living, endlessly variable ways and traditions in which religious faith presents itself in the world.</quote>
+      </li>
+      <!--
+      <li> : <i class="booktitle"></i>. 
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      -->
+    </ul>
+
     <h2>Other Resources</h2>
     <ul>
       <li><span lang="de">Alm, Niko</span>:
@@ -299,12 +328,6 @@
         <a href="https://global.oup.com/academic/product/atheism-9780199334582"><abbr>ISBN</abbr> 9780199334582</a>.
       </li>
       <li>Smith, Wilfred Cantwell:
-        <i class="booktitle">The Meaning and End of Religion</i>. [1962] Fortress Press, 1990. (352 pages)
-        <a href="http://fortresspress.com/product/meaning-and-end-religion"><abbr>ISBN</abbr> 9780800624750</a>.
-        <br />Publisher's description:
-        <quote>Wilfred Cantwell Smith, maintained in this vastly important work that Westerners have misperceived religious life by making "religion" into one thing. He shows the inadequacy of "religion" to capture the living, endlessly variable ways and traditions in which religious faith presents itself in the world.</quote>
-      </li>
-      <li>Smith, Wilfred Cantwell:
         <i class="booktitle">What Is Scripture?: A Comparative Approach</i>. [1962] Fortress Press, 1994. (400 pages)
         <a href="http://fortresspress.com/product/what-scripture-comparative-approach"><abbr>ISBN</abbr> 9780800626082</a>.
       </li>
@@ -367,6 +390,10 @@
       </li>
     </ul>
 
+    <!--@@todo section or page about atheism:
+      * Atheist Republic [Non-profit Organization incorporated under the Canada Not-for-profit Corporations Act]: https://www.atheistrepublic.com/
+    -->
+
     <h2>Misconceptions about Atheism</h2>
     <ul>
       <li>The Young Turks:
@@ -375,6 +402,11 @@
       </li>
       <li><a href="https://www.theatheistbook.com/">A Better Life: 100 Atheists Speak Out on Joy &amp; Meaning in a World Without God</a>.
       </li>
+      <!--
+      <li> : <i class="booktitle"></i>. 
+        <a href=""><abbr>ISBN</abbr> </a>.
+      </li>
+      -->
     </ul>
 
     <h2>Examples of Outdated Beliefs</h2>
@@ -494,6 +526,7 @@
 
       * Atheist Republic: https://www.atheistrepublic.com/
         -> Why There Is No God: https://www.atheistrepublic.com/blog/arminnavabi/why-there-no-god-quick-responses-10-common-theist-arguments (cf. graph with frequency of miracles!
+      * Atheist Nexus: http://atheistnexus.org/
       * Aufklärungsdienst / Düsseldorfer Aufklärungsdienst (DA!): https://aufklaerungsdienst.de/ 
       * '"The Pope is King of The Pedos" Jimmy On Religion | Jimmy Carr', 11 minutes, 10.06.2019: https://www.youtube.com/watch?v=eabTJbFnSWw
     -->
