Add: Kneale: An Atheist's History of Belief

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -227,6 +227,9 @@
       <li>Hume, David: <i class="booktitle">Dialogues Concerning Natural Religion, and The Natural History of Religion</i>. Edited by J. C. A. Gaskin. Oxford University Press, 2008. (256 pages)
         <a href="https://global.oup.com/academic/product/dialogues-concerning-natural-religion-and-the-natural-history-of-religion-9780199538324"><abbr>ISBN</abbr> 9780199538324</a>.
       </li>
+      <li>Kneale, Matthew: <i class="booktitle">An Atheist's History of Belief</i>. The Bodley Head / Vintage (Penguin), 2014. (272 pages)
+        <a href="https://www.penguin.co.uk/books/1096355/an-atheist-s-history-of-belief/9780099584421.html"><abbr>ISBN</abbr> 9780099584421</a>.
+      </li>
       <li>Smith, Wilfred Cantwell:
         <i class="booktitle">The Meaning and End of Religion</i>. [1962] Fortress Press, 1990. (352 pages)
         <a href="http://fortresspress.com/product/meaning-and-end-religion"><abbr>ISBN</abbr> 9780800624750</a>.
