Add: Holloway: A Little History of Religion

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -230,6 +230,14 @@
       <li>Kneale, Matthew: <i class="booktitle">An Atheist's History of Belief</i>. The Bodley Head / Vintage (Penguin), 2014. (272 pages)
         <a href="https://www.penguin.co.uk/books/1096355/an-atheist-s-history-of-belief/9780099584421.html"><abbr>ISBN</abbr> 9780099584421</a>.
       </li>
+      <li>Holloway, Richard: <i class="booktitle">A Little History of Religion</i>. Yale University Press, 2017. (256 pages)
+        <a href="https://yalebooks.yale.edu/book/9780300228816/little-history-religion"><abbr>ISBN</abbr> 9780300228816</a>.
+        <br /><a href="https://en.wikipedia.org/wiki/Richard_Holloway">Richard Holloway</a> was Bishop of Edinburgh from 1986 to 2000.
+        According to the publisher,
+        <q>Ranging far beyond the major world religions of Judaism, Islam, Christianity, Buddhism, and Hinduism,
+        Holloway also examines where religious belief comes from, the search for meaning throughout history,
+        today’s fascinations with Scientology and creationism, religiously motivated violence, hostilities between religious people and secularists, and more.</q>
+      </li>
       <li>Smith, Wilfred Cantwell:
         <i class="booktitle">The Meaning and End of Religion</i>. [1962] Fortress Press, 1990. (352 pages)
         <a href="http://fortresspress.com/product/meaning-and-end-religion"><abbr>ISBN</abbr> 9780800624750</a>.
