Add: Salzman et al: The Cambridge History of Religions in the Ancient World. Volume 1. From the Bronze Age to the Hellenistic Age

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -238,6 +238,18 @@
         Holloway also examines where religious belief comes from, the search for meaning throughout history,
         today’s fascinations with Scientology and creationism, religiously motivated violence, hostilities between religious people and secularists, and more.</q>
       </li>
+      <li>Salzman, Michele Renee; Sweeney, Marvin A. (editors): <i class="booktitle">The Cambridge History of Religions in the Ancient World. Volume 1. From the Bronze Age to the Hellenistic Age</i>. Cambridge University Press, 2018. (464 pages)
+        <a href="https://www.cambridge.org/de/academic/subjects/religion/history-religion/cambridge-history-religions-ancient-world-volume-1?format=PB"><abbr>ISBN</abbr> 9781108703130</a>.
+        <br />The <a href="https://en.wikipedia.org/wiki/Bronze_Age">Bronze Age</a> probably started in the 4th millennium <abbr>B.C.</abbr>
+        (possibly around 3300 <abbr>B.C.</abbr>), while the oldest
+        <a href="https://en.wikipedia.org/wiki/Funeral#Overview">burial rites</a>
+        are dated to at least 300,000 years ago, and the
+        <a href="https://en.wikipedia.org/wiki/Lion-man">oldest known zoomorphic figurine</a> is between 35,000 and 40,000 years old,
+        so the religions described in this book are very recent compared to the origin of faith or religion.
+        The book's introduction also points out that,
+        <q>In order to avoid preconceptions arising from definitional pitfalls, the contributors to these volumes have tried to analyze ancient religions on their own terms,
+        in full cognizance of how these traditions diverge from modern definitions of religion.</q>
+      </li>
       <li>Smith, Wilfred Cantwell:
         <i class="booktitle">The Meaning and End of Religion</i>. [1962] Fortress Press, 1990. (352 pages)
         <a href="http://fortresspress.com/product/meaning-and-end-religion"><abbr>ISBN</abbr> 9780800624750</a>.
