Add: Whitmarsh: Battling the Gods: Atheism in the Ancient World

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -250,6 +250,9 @@
         <q>In order to avoid preconceptions arising from definitional pitfalls, the contributors to these volumes have tried to analyze ancient religions on their own terms,
         in full cognizance of how these traditions diverge from modern definitions of religion.</q>
       </li>
+      <li>Whitmarsh, Tim: <i class="booktitle">Battling the Gods: Atheism in the Ancient World</i>. Faber &amp; Faber, 2017. (304 pages)
+        <a href="https://www.faber.co.uk/9780571279319-battling-the-gods.html"><abbr>ISBN</abbr> 9780571279319</a>.
+      </li>
       <li>Smith, Wilfred Cantwell:
         <i class="booktitle">The Meaning and End of Religion</i>. [1962] Fortress Press, 1990. (352 pages)
         <a href="http://fortresspress.com/product/meaning-and-end-religion"><abbr>ISBN</abbr> 9780800624750</a>.
