Add: Geslani: Rites of the God-King: Śānti and Ritual Change in Early Hinduism

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -238,6 +238,9 @@
         Holloway also examines where religious belief comes from, the search for meaning throughout history,
         today’s fascinations with Scientology and creationism, religiously motivated violence, hostilities between religious people and secularists, and more.</q>
       </li>
+      <li>Geslani, Marco: <i class="booktitle">Rites of the God-King: Śānti and Ritual Change in Early Hinduism</i>. Oxford Ritual Studies. Oxford University Press, 2018. (336 pages)
+        <a href="https://global.oup.com/academic/product/rites-of-the-god-king-9780190862886"><abbr>ISBN</abbr> 9780190862886</a>.
+      </li>
       <li>Salzman, Michele Renee; Sweeney, Marvin A. (editors): <i class="booktitle">The Cambridge History of Religions in the Ancient World. Volume 1. From the Bronze Age to the Hellenistic Age</i>. Cambridge University Press, 2018. (464 pages)
         <a href="https://www.cambridge.org/de/academic/subjects/religion/history-religion/cambridge-history-religions-ancient-world-volume-1?format=PB"><abbr>ISBN</abbr> 9781108703130</a>.
         <br />The <a href="https://en.wikipedia.org/wiki/Bronze_Age">Bronze Age</a> probably started in the 4th millennium <abbr>B.C.</abbr>
