Add: Nongbri: Before Religion

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -262,6 +262,13 @@
         <br />Publisher's description:
         <quote>Wilfred Cantwell Smith, maintained in this vastly important work that Westerners have misperceived religious life by making "religion" into one thing. He shows the inadequacy of "religion" to capture the living, endlessly variable ways and traditions in which religious faith presents itself in the world.</quote>
       </li>
+      <li>Nongbri, Brent: <i class="booktitle">Before Religion: A History of a Modern Concept</i>. Yale University Press, 2015. (288 pages)
+        <a href="https://yalebooks.yale.edu/book/9780300216783/religion"><abbr>ISBN</abbr> 9780300216783</a>.
+        <br />Like Wilfred Cantwell Smith, this book discusses the origin of the term &ldquo;religion&rdquo; rather than the origin of religion itself, because the concept of religion is not universal.
+        According to the publisher's description,
+        <q>Examining a wide array of ancient writings, Nongbri demonstrates that in antiquity, there was no conceptual arena that could be designated as “religious” as opposed to “secular.”
+        Surveying representative episodes from a two-thousand-year period, while constantly attending to the concrete social, political, and colonial contexts that shaped relevant works of philosophers, legal theorists, missionaries, and others, Nongbri offers a concise and readable account of the emergence of the concept of religion.</q>
+      </li>
       <!--
       <li> : <i class="booktitle"></i>. 
         <a href=""><abbr>ISBN</abbr> </a>.
