Add: Barton and Boyarin: Imagine No Religion

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -269,6 +269,13 @@
         <q>Examining a wide array of ancient writings, Nongbri demonstrates that in antiquity, there was no conceptual arena that could be designated as “religious” as opposed to “secular.”
         Surveying representative episodes from a two-thousand-year period, while constantly attending to the concrete social, political, and colonial contexts that shaped relevant works of philosophers, legal theorists, missionaries, and others, Nongbri offers a concise and readable account of the emergence of the concept of religion.</q>
       </li>
+      <li>Barton, Carlin A.; Boyarin, Daniel: <i class="booktitle">Imagine No Religion: How Modern Abstractions Hide Ancient Realities</i>. Fordham University Press, 2016. (228 pages)
+        <a href="https://www.fordhampress.com/9780823271207/imagine-no-religion/"><abbr>ISBN</abbr> 9780823271207</a>.
+        <br />According to the publisher's description,
+        <q>[i]n <i class="booktitle">Imagine No Religion</i>, Carlin A. Barton and Daniel Boyarin map the myriad meanings of the Latin and Greek words religio and thrēskeia,
+        frequently and reductively mistranslated as “religion,” in order to explore the manifold nuances of their uses within ancient Roman and Greek societies.
+        In doing so, they reveal how we can conceptualize anew and speak of these cultures without invoking the anachronistic concept of religion.</q>
+      </li>
       <!--
       <li> : <i class="booktitle"></i>. 
         <a href=""><abbr>ISBN</abbr> </a>.
