Add: Mithen: The Prehistory of the Mind

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -276,6 +276,9 @@
         frequently and reductively mistranslated as “religion,” in order to explore the manifold nuances of their uses within ancient Roman and Greek societies.
         In doing so, they reveal how we can conceptualize anew and speak of these cultures without invoking the anachronistic concept of religion.</q>
       </li>
+      <li>Mithen, Steven: <i class="booktitle">The Prehistory Of The Mind: A Search for the Origins of Art, Religion and Science</i>. [1996] London: Thames and Hudson, 2003.
+        <abbr>ISBN</abbr> 0 75380 204 X.
+      </li>
       <!--
       <li> : <i class="booktitle"></i>. 
         <a href=""><abbr>ISBN</abbr> </a>.
