Add: Wikipedia: Prehistoric religion

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -284,6 +284,10 @@
         <a href=""><abbr>ISBN</abbr> </a>.
       </li>
       -->
+      <li>
+        <a href="https://en.wikipedia.org/wiki/Prehistoric_religion">Prehistoric religion</a>
+        (Wikipedia).
+      </li>
     </ul>
 
     <h2>Other Resources</h2>
