Add: Nixey: The Darkening Age

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -348,6 +348,11 @@
         <a href="https://en.wikipedia.org/wiki/Religiosity_and_intelligence">Religiosity and intelligence</a>.
       </li>
       <!--@@more: https://duckduckgo.com/?q=helmuth+nyborg+intelligence+religion&ia=web -->
+      <li>Nixey, Catherine: <i class="booktitle">The Darkening Age: The Christian Destruction of the Classical World</i>. Pan Macmillan, 2018. (352 pages)
+        <a href="https://www.panmacmillan.com/authors/catherine-nixey/the-darkening-age/9781509816071"><abbr>ISBN</abbr> 9781509816071</a>.
+        <br />See also the blog post
+        <a href="https://www.panmacmillan.com/blogs/history/catherine-nixey-darkening-age-philosophers">Where did all the Philosophers go?</a> (04.06.2018).
+      </li>
       <li>Scruton, Roger:
         <i class="booktitle">The Soul of the World</i>. Princeton University Press, 2016. (216 pages)
         <a href="https://press.princeton.edu/titles/10188.html"><abbr>ISBN</abbr> 9781400850006</a>.
