--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -447,6 +447,10 @@
         <a href="https://ethnobiomed.biomedcentral.com/articles/10.1186/1746-4269-11-5">Evidence of a link between taboos and sacrifices and resource scarcity of ritual plants</a>,
         <i class="journal">Journal of Ethnobiology and Ethnomedicine</i>, 11 (2015), article number 5 (open access).
       </li>
+      <li>
+        <a href="https://allthatsinteresting.com/human-sacrifice">Human Sacrifice In The Pre-Columbian Americas: Separating Fact From Fiction</a>,
+        <i class="website">All That's Interesting</i>, 30.07.2017.
+      </li>
     </ul>
 
     <!--@@todo section or page about atheism:
