Add: Meyer-Rochow: Food taboos

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -451,6 +451,10 @@
         <a href="https://allthatsinteresting.com/human-sacrifice">Human Sacrifice In The Pre-Columbian Americas: Separating Fact From Fiction</a>,
         <i class="website">All That's Interesting</i>, 30.07.2017.
       </li>
+      <li>Meyer-Rochow, Victor Benno:
+        <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC2711054/">Food taboos: their origins and purposes</a>,
+        <i class="journal">Journal of Ethnobiology and Ethnomedicine</i>, June 2009.
+      </li>
     </ul>
 
     <!--@@todo section or page about atheism:
