Add class .ytchannel (YouTube)

--- a/humanities/index.html
+++ b/humanities/index.html
@@ -280,7 +280,7 @@
       -->
       <li>Willis, Martin:
         <a href="https://www.youtube.com/watch?v=7DyJXC7K1fw">What role do the humanities play in our scientific world?</a>
-        (University of Birmingham on YouTube, 18.10.2018, 42 minutes).
+        (<i class="ytchannel">University of Birmingham</i> on YouTube, 18.10.2018, 42 minutes).
         Video recording of a talk by Professor Martin Willis, Cardiff University,
         at the University of Birmingham on 17 October 2018.
         The video is always available on the website of
