Add: Antony: Philosophers without Gods

--- a/philosophy/religion.html
+++ b/philosophy/religion.html
@@ -469,6 +469,12 @@
       </li>
       <li><a href="https://www.theatheistbook.com/">A Better Life: 100 Atheists Speak Out on Joy &amp; Meaning in a World Without God</a>.
       </li>
+      <li>Antony, Louise M.: <i class="booktitle">Philosophers without Gods: Meditations on Atheism and the Secular Life</i>. Oxford University Press, 2010. (320 pages)
+        <a href="https://global.oup.com/academic/product/philosophers-without-gods-9780199743414"><abbr>ISBN</abbr> 9780199743414</a>.
+        <br />According to the publisher, the book's selling points include the followig:
+        <q>In these essays, nineteen leading philosophers explore the inner life of atheism and shatter common stereotypes surrounding atheism.</q>
+        <q>The collected essays prove that morality is independent of the existence of God by using arguments that date back to Plato.</q>
+      </li>
       <!--
       <li> : <i class="booktitle"></i>. 
         <a href=""><abbr>ISBN</abbr> </a>.
